--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="container-fluid p-0">
         <div class="header-video-container position-relative vh-100" style="height: 100vh; min-height: 400px; max-height: none; overflow: hidden;">
             <video id="headerVideo" class="w-100 h-100 position-absolute" style="object-fit: cover; left: 0; top: 0; z-index: 1;" autoplay loop muted playsinline>
-                <source src="img/video.mp4" type="video/mp4">
+                <source src="img/video/video_background.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="header-content position-absolute w-100 h-100 d-flex flex-column justify-content-center align-items-center" style="z-index: 2; top: 0; left: 0;">
