--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
                 <h2 class="text-white mt-2 mb-4 text-center display-6">Musicalmente Efectivos</h2>
                 <a href="#about" class="btn btn-lg btn-primary px-4">Conócenos</a>
             </div>
-            <button id="muteBtn" class="btn btn-secondary position-absolute" style="bottom: 30px; right: 30px; z-index: 3;">
+            <!-- <button id="muteBtn" class="btn btn-secondary position-absolute" style="bottom: 30px; right: 30px; z-index: 3;">
                 <i class="fa fa-volume-mute"></i>
-            </button>
+            </button> -->
             <div class="header-overlay position-absolute w-100 h-100" style="background: rgba(0, 0, 0, 0.781); z-index: 1; top: 0; left: 0;"></div>
         </div>
     </div>
@@ -142,17 +142,17 @@
                 <p class="text-white" style="text-align: justify;">Trivium Records es una empresa dedicada a la producción, enseñanza y representación musical en todos los aspectos. Tiene como objetivo brindar 
                     servicios y productos de calidad a quienes quieren llevar sus producciones, su nivel música a su carrera profesional a nuevos horizontes</p>
                 <div class="row py-4 justify-content-center text-center">
-                    <div class="col-sm-3 text-center">
+                    <div class="col-sm-3 text-center mb-4 px-2">
                         <img src="img/Trivium_producciones.png" alt="Trivium Producciones" class="mb-4" style="height:170px; filter: brightness(0) invert(1);">
                         <!-- <h5 class="mt-2 text-white">Trivium Producciones</h5> -->
                     </div>
-                    <div class="col-sm-3 text-center">
-                        <img src="img/Trivium_producciones.png" alt="Trivium Producciones" class="mb-4" style="height:170px; filter: brightness(0) invert(1);">
-                        <!-- <h5 class="mt-2 text-white">Trivium Producciones</h5> -->
+                    <div class="col-sm-3 text-center mb-4 px-2">
+                        <img src="img/Trivium_academia.png" alt="Trivium Academia" class="mb-4" style="height:170px; filter: brightness(0) invert(1);">
+                        <!-- <h5 class="mt-2 text-white">Trivium Academia</h5> -->
                     </div>
-                    <div class="col-sm-3 text-center">
-                        <img src="img/Trivium_producciones.png" alt="Trivium Producciones" class="mb-4" style="height:170px; filter: brightness(0) invert(1);">
-                        <!-- <h5 class="mt-2 text-white">Trivium Producciones</h5> -->
+                    <div class="col-sm-3 text-center mb-4 px-2">
+                        <img src="img/Trivium_label.png" alt="Trivium Label" class="mb-4" style="height:170px; filter: brightness(0) invert(1);">
+                        <!-- <h5 class="mt-2 text-white">Trivium Label</h5> -->
                     </div>
                 </div>
                 <!-- <a href="" class="btn btn-lg px-4 btn-primary">Learn More</a> -->
