--- a/index.html
+++ b/index.html
@@ -364,14 +364,12 @@
                         <p><i class="fa fa-phone-alt mr-2"></i>+012 345 67890</p>
                         <p><i class="fa fa-envelope mr-2"></i>info@example.com</p>
                         <div class="d-flex justify-content-start mt-4">
+                             <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0"
+                                style="width: 40px; height: 40px;" href="https://www.tiktok.com/@triviumrecords"><i class="fab fa-tiktok"></i></a>
                             <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0"
-                                style="width: 40px; height: 40px;" href="#"><i class="fab fa-twitter"></i></a>
+                                style="width: 40px; height: 40px;" href="https://www.facebook.com/profile.php?id=61576953278858"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0"
-                                style="width: 40px; height: 40px;" href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0"
-                                style="width: 40px; height: 40px;" href="#"><i class="fab fa-linkedin-in"></i></a>
-                            <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0"
-                                style="width: 40px; height: 40px;" href="#"><i class="fab fa-instagram"></i></a>
+                                style="width: 40px; height: 40px;" href="https://www.instagram.com/triviumrecords.mx"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
