--- a/index.html
+++ b/index.html
@@ -66,22 +66,22 @@
                         <a class="nav-link text-white fw-medium text-center" href="/contact.html">Contacto</a>
                     </li>
                 </ul>
-                <!-- Navbar social icons -->
+                <!-- Navbar social icons (coloca esto dentro de tu navbar, después del menú) -->
                 <div class="d-none d-md-flex align-items-center gap-2">
                     <a href="https://www.tiktok.com/@triviumrecords"
                         class="btn btn-outline-light rounded-circle text-center px-0 mx-1"
                         style="width: 40px; height: 40px;" aria-label="TikTok" target="_blank">
-                        <i class="fab fa-tiktok"></i>
+                        <i class="fab fa-tiktok" style="font-size: 1.4rem;"></i>
                     </a>
                     <a href="https://www.facebook.com/profile.php?id=61576953278858"
                         class="btn btn-outline-light rounded-circle text-center px-0 mx-1"
                         style="width: 40px; height: 40px;" aria-label="Facebook" target="_blank">
-                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-facebook-f" style="font-size: 1.4rem;"></i>
                     </a>
                     <a href="https://www.instagram.com/triviumrecords.mx"
                         class="btn btn-outline-light rounded-circle text-center px-0 mx-1"
-                        style="width: 40px; height: 40px;" aria-label="Instagram">
-                        <i class="fab fa-instagram"></i>
+                        style="width: 40px; height: 40px;" aria-label="Instagram" target="_blank">
+                        <i class="fab fa-instagram" style="font-size: 1.4rem;"></i>
                     </a>
                 </div>
             </div>
@@ -202,7 +202,7 @@
             <div class="col-md-6 col-lg-4 mb-4">
                 <div class="custom-card">
                     <div class="custom-card-img-wrapper">
-                        <img class="custom-card-img" src="img/service-3.jpg" alt="">
+                        <img class="custom-card-img" src="img/service_3.webp" alt="">
                     </div>
                     <div class="custom-card-content">
                         <div class="d-flex justify-content-center align-items-center mb-2">
@@ -258,7 +258,7 @@
                 <div class="testimonial-item px-3">
                     <div class="testimonial-text position-relative border bg-light mb-4 py-3 px-4">
                         "Apenas ando reviviendo, ame todo, la musica, la illuminacion, el sonido, mis amigos siguen
-                        preguntando por ustede!"
+                        preguntando por ustedes!"
                     </div>
                     <div class="d-flex align-items-center">
                         <div class="pl-4">
