--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta charset="utf-8">
     <title>Trivium Records - Profesionalmente Apasionados, Musicalmente Efectivos.</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free Website Template" name="keywords">
-    <meta content="Free Website Template" name="description">
+    <meta
+        content="Trivium Records, producción musical, academia de música, representación artística, León, Gto, estudio de grabación, clases de música, DJ, eventos, conciertos, sello discográfico, booking, promoción musical, música en vivo, México"
+        name="keywords">
+    <meta
+        content="Trivium Records: producción musical, academia de música y representación artística en León, Gto. Profesionalmente apasionados, musicalmente efectivos."
+        name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -87,10 +91,10 @@
             </div>
         </div>
     </nav>
+    <!-- Navbar End -->
 
 
-
-
+    <!-- Header Start -->
     <div class="container-fluid p-0">
         <div class="header-video-container position-relative vh-100"
             style="height: 100vh; min-height: 400px; max-height: none; overflow: hidden;">
@@ -120,7 +124,7 @@
                 style="background: rgba(0, 0, 0, 0.781); z-index: 1; top: 0; left: 0;"></div>
         </div>
     </div>
-    <!-- Carousel End -->
+    <!-- Header End -->
 
 
     <!-- About Start -->
@@ -168,19 +172,22 @@
         <div class="row pb-3 justify-content-center">
             <!-- Card 1 -->
             <div class="col-md-6 col-lg-4 mb-4">
-                <div class="custom-card">
-                    <div class="custom-card-img-wrapper">
-                        <img class="custom-card-img" src="img/service_1.webp" alt="">
-                    </div>
-                    <div class="custom-card-content">
-                        <div class="d-flex justify-content-center align-items-center mb-2">
-                            <h4 class="card-title text-white text-truncate m-0">Trivium Academia</h4>
+                <a href="">
+                    <div class="custom-card">
+                        <div class="custom-card-img-wrapper">
+                            <img class="custom-card-img" src="img/service_1.webp" alt="">
                         </div>
-                        <p>Un espacio académico para la enseñanza de música (piano, canto, DJ) enfocado hacia el
-                            perfeccionamiento musical.</p>
-                        <p>Clases teóricas y prácticas impartidas por maestros con experiencia vasta en la música.</p>
+                        <div class="custom-card-content">
+                            <div class="d-flex justify-content-center align-items-center mb-2">
+                                <h4 class="card-title text-white text-truncate m-0">Trivium Academia</h4>
+                            </div>
+                            <p>Un espacio académico para la enseñanza de música (piano, canto, DJ) enfocado hacia el
+                                perfeccionamiento musical.</p>
+                            <p>Clases teóricas y prácticas impartidas por maestros con experiencia vasta en la música.
+                            </p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <!-- Card 2 -->
             <div class="col-md-6 col-lg-4 mb-4">
@@ -326,29 +333,24 @@
 
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-secondary text-white mt-5 py-5 px-sm-3 px-md-5">
-        <div class="row pt-5">
-            <div class="col-lg-4 col-md-12 mb-5">
-                <h1 class="mb-3 display-5 text-capitalize font-italic text-white"><span
-                        class="text-primary">Safety</span>First</h1>
-                <p class="m-0">Ipsum amet sed vero et lorem stet eos ut, labore sed sed stet sea est ipsum ut. Volup
-                    amet ea sanct ipsum, dolore vero lorem no duo eirmod. Eirmod amet ipsum no ipsum lorem clita ut. Ut
-                    sed sit lorem ea lorem sed, amet stet sit sea ea diam tempor kasd kasd. Diam nonumy etsit tempor ut
-                    sed diam sed et ea</p>
-            </div>
-            <div class="col-lg-8 col-md-12">
+    <div class="container-fluid bg-black text-white mt-5 py-2 px-sm-3 px-md-5">
+        <div class="text-center mb-1">
+            <img src="img/logo_s.webp" alt="Trivium Records Logo" style="max-width: 100px; height: auto;">
+        </div>
+        <div class="row pt-2">
+            <div class="col-lg-12 col-md-12">
                 <div class="row">
-                    <div class="col-md-4 mb-5">
+                    <!-- <div class="col-md-4 mb-5">
                         <h5 class="text-primary mb-4">Quick Links</h5>
                         <div class="d-flex flex-column justify-content-start">
-                            <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                            <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About Us</a>
-                            <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Services</a>
-                            <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Team</a>
-                            <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
+                            <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Inicio</a>
+                            <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Sobre Nosotros</a>
+                            <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Servicios</a>
+                            <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Nuestros Maestros</a>
+                            <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Contactanos</a>
                         </div>
-                    </div>
-                    <div class="col-md-4 mb-5">
+                    </div> -->
+                    <!-- <div class="col-md-4 mb-5">
                         <h5 class="text-primary mb-4">Popular Links</h5>
                         <div class="d-flex flex-column justify-content-start">
                             <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Home</a>
@@ -357,34 +359,47 @@
                             <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Team</a>
                             <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
                         </div>
-                    </div>
-                    <div class="col-md-4 mb-5">
-                        <h5 class="text-primary mb-4">Get In Touch</h5>
-                        <p><i class="fa fa-map-marker-alt mr-2"></i>123 Street, New York, USA</p>
-                        <p><i class="fa fa-phone-alt mr-2"></i>+012 345 67890</p>
-                        <p><i class="fa fa-envelope mr-2"></i>info@example.com</p>
-                        <div class="d-flex justify-content-start mt-4">
-                             <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0"
-                                style="width: 40px; height: 40px;" href="https://www.tiktok.com/@triviumrecords"><i class="fab fa-tiktok"></i></a>
-                            <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0"
-                                style="width: 40px; height: 40px;" href="https://www.facebook.com/profile.php?id=61576953278858"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0"
-                                style="width: 40px; height: 40px;" href="https://www.instagram.com/triviumrecords.mx"><i class="fab fa-instagram"></i></a>
+                    </div> -->
+                    <div class="col-lg-12 text-center">
+                        <h5 class="text-white mb-3">Contactanos</h5>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <p><i class="fa fa-map-marker-alt mx-2"></i>Benedicto XV #144, San Jeronimo II, León,
+                                    Gto. Mex</p>
+                            </div>
+                            <div class="col-md-4">
+                                <p><i class="fa fa-phone-alt mx-2"></i>+52 473 137 0884</p>
+                            </div>
+                            <div class="col-md-4">
+                                <p><i class="fa fa-envelope mx-2"></i>contacto@triviumrecords.com.mx</p>
+                            </div>
+                        </div>
+                        <div class="d-flex justify-content-center mt-4 my-4 gap-2">
+                            <a class="btn btn-outline-light rounded-circle text-center px-0 mx-1"
+                                style="width: 40px; height: 40px;" href="https://www.tiktok.com/@triviumrecords"><i
+                                    class="fab fa-tiktok"></i></a>
+                            <a class="btn btn-outline-light rounded-circle text-center px-0 mx-1"
+                                style="width: 40px; height: 40px;"
+                                href="https://www.facebook.com/profile.php?id=61576953278858"><i
+                                    class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-outline-light rounded-circle text-center px-0 mx-1"
+                                style="width: 40px; height: 40px;" href="https://www.instagram.com/triviumrecords.mx"><i
+                                    class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="row pt-3">
-            <div class="col-md-6 text-center text-md-left mb-3 mb-md-0">
+            <div class="col-md-12 text-center text-md-left mb-3 mb-md-0">
                 <p class="m-0 text-white">
-                    &copy; <a class="text-white font-weight-bold" href="#">Your Site Name</a>. All Rights Reserved.
+                    &copy; <a class="text-white font-weight-bold" href="#">Trivium Records</a>. Derechos Reservados.
 
                     <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                    Designed by <a class="text-white font-weight-bold" href="https://htmlcodex.com">HTML Codex</a>
+                    <!-- Designed by <a class="text-white font-weight-bold" href="https://htmlcodex.com">HTML Codex</a> -->
                 </p>
             </div>
-            <div class="col-md-6 text-center text-md-right">
+            <!-- <div class="col-md-6 text-center text-md-right">
                 <ul class="nav d-inline-flex">
                     <li class="nav-item">
                         <a class="nav-link text-white py-0" href="#">Privacy</a>
@@ -399,7 +414,7 @@
                         <a class="nav-link text-white py-0" href="#">Help</a>
                     </li>
                 </ul>
-            </div>
+            </div> -->
         </div>
     </div>
     <!-- Footer End -->
