--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
                         <a class="nav-link text-white fw-medium text-center" href="/">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-medium text-center" href="/about.html">Nosotros</a>
+                        <a class="nav-link text-white fw-medium text-center" href="./about.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-medium text-center" href="/service.html">Servicios</a>
+                        <a class="nav-link text-white fw-medium text-center" href="./service.html">Servicios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-medium text-center" href="/contact.html">Contacto</a>
+                        <a class="nav-link text-white fw-medium text-center" href="./contact.html">Contacto</a>
                     </li>
                 </ul>
                 <!-- Navbar social icons (coloca esto dentro de tu navbar, después del menú) -->
