--- a/service.html
+++ b/service.html
@@ -46,7 +46,7 @@
     <nav id="mainNavbar" class="navbar navbar-expand-md navbar-light fixed-top bg-transparent shadow-sm transition-bg">
         <div class="container">
             <!-- Logo -->
-            <a class="navbar-brand d-flex align-items-center" href="/">
+            <a class="navbar-brand d-flex align-items-center" href="./">
                 <img id="logoImg" src="img/logo_s.webp" alt="Logo" style="height:75px; transition:all .3s;">
                 <span class="ms-2 alumni-font fw-bold fs-4" id="logoText"></span>
             </a>
@@ -59,16 +59,16 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav mx-auto mb-2 mb-md-0 justify-content-center w-100">
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-medium text-center" href="/">Inicio</a>
+                        <a class="nav-link text-white fw-medium text-center" href="./">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-medium text-center" href="/about.html">Nosotros</a>
+                        <a class="nav-link text-white fw-medium text-center" href="./about.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-medium text-center active" href="/service.html">Servicios</a>
+                        <a class="nav-link text-white fw-medium text-center active" href="./service.html">Servicios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-medium text-center" href="/contact.html">Contacto</a>
+                        <a class="nav-link text-white fw-medium text-center" href="./contact.html">Contacto</a>
                     </li>
                 </ul>
                 <!-- Navbar social icons (coloca esto dentro de tu navbar, después del menú) -->
