--- a/service.html
+++ b/service.html
@@ -45,7 +45,7 @@
     <!-- Navbar -->
     <nav id="mainNavbar" class="navbar navbar-expand-md navbar-light fixed-top bg-transparent shadow-sm transition-bg">
         <div class="container">
-            <!-- Logo -->
+            <!-- Logo a la izquierda -->
             <a class="navbar-brand d-flex align-items-center" href="./">
                 <img id="logoImg" src="img/logo_s.webp" alt="Logo" style="height:75px; transition:all .3s;">
                 <span class="ms-2 alumni-font fw-bold fs-4" id="logoText"></span>
@@ -55,38 +55,34 @@
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <!-- Menú -->
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav mx-auto mb-2 mb-md-0 justify-content-center w-100">
+            <!-- Menú y redes sociales -->
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
+                <ul class="navbar-nav mx-auto mb-2 mb-md-0 d-flex align-items-center justify-content-center gap-2">
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-medium text-center" href="./">Inicio</a>
+                        <a class="nav-link text-white fw-medium text-center m-3" href="./">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-medium text-center" href="./about.html">Nosotros</a>
+                        <a class="nav-link text-white fw-medium text-center m-3" href="./about.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-medium text-center active" href="./service.html">Servicios</a>
+                        <a class="nav-link text-white fw-medium text-center active m-3" href="./service.html">Servicios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-medium text-center" href="./contact.html">Contacto</a>
+                        <a class="nav-link text-white fw-medium text-center m-3" href="./contact.html">Contacto</a>
                     </li>
                 </ul>
-                <!-- Navbar social icons (coloca esto dentro de tu navbar, después del menú) -->
-                <div class="d-none d-md-flex align-items-center gap-2">
-                    <a href="https://www.tiktok.com/@triviumrecords"
-                        class="btn btn-outline-light rounded-circle text-center px-0 mx-1"
-                        style="width: 40px; height: 40px;" aria-label="TikTok" target="_blank">
-                        <i class="fab fa-tiktok" style="font-size: 1.4rem;"></i>
+                <div class="d-flex align-items-center ms-md-3">
+                    <a class="btn btn-outline-light rounded-circle text-center px-0 mx-1"
+                        style="width: 36px; height: 36px;" href="https://www.tiktok.com/@triviumrecords" target="_blank" rel="noopener">
+                        <i class="fab fa-tiktok"></i>
                     </a>
-                    <a href="https://www.facebook.com/profile.php?id=61576953278858"
-                        class="btn btn-outline-light rounded-circle text-center px-0 mx-1"
-                        style="width: 40px; height: 40px;" aria-label="Facebook" target="_blank">
-                        <i class="fab fa-facebook-f" style="font-size: 1.4rem;"></i>
+                    <a class="btn btn-outline-light rounded-circle text-center px-0 mx-1"
+                        style="width: 36px; height: 36px;" href="https://www.facebook.com/profile.php?id=61576953278858" target="_blank" rel="noopener">
+                        <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a href="https://www.instagram.com/triviumrecords.mx"
-                        class="btn btn-outline-light rounded-circle text-center px-0 mx-1"
-                        style="width: 40px; height: 40px;" aria-label="Instagram" target="_blank">
-                        <i class="fab fa-instagram" style="font-size: 1.4rem;"></i>
+                    <a class="btn btn-outline-light rounded-circle text-center px-0 mx-1"
+                        style="width: 36px; height: 36px;" href="https://www.instagram.com/triviumrecords.mx" target="_blank" rel="noopener">
+                        <i class="fab fa-instagram"></i>
                     </a>
                 </div>
             </div>
@@ -148,7 +144,7 @@
     <!-- Party pack Start -->
     <div class="container pt-5">
         <div class="d-flex flex-column text-center mb-5">
-            <h2 class="text-white mb-3">Party</h2>
+            <h2 class="text-white mb-3 display-4">Party</h2>
         </div>
         <div class="row pb-3 justify-content-center">
             <div class="col-md-6 col-lg-4 mb-4">
@@ -254,7 +250,7 @@
     <!-- Conference Start -->
     <div class="container pt-5">
         <div class="d-flex flex-column text-center mb-5">
-            <h2 class="text-white mb-3">Conference</h2>
+            <h2 class="text-white mb-3 display-4">Conference</h2>
         </div>
         <div class="row pb-3 justify-content-center">
             <div class="col-md-6 col-lg-4 mb-4">
