--- a/service.html
+++ b/service.html
@@ -145,6 +145,7 @@
     <div class="container pt-5">
         <div class="d-flex flex-column text-center mb-5">
             <h2 class="text-white mb-3 display-4">Party</h2>
+            <p class="text-white" style="font-size: .9rem;">"Ninguno de los paquetes incluye viáticos ni hospedaje. En caso de ser necesario, estos serán cubiertos por el cliente. Se aplicarán cargos adicionales por cada hora excedida."</p>
         </div>
         <div class="row pb-3 justify-content-center">
             <div class="col-md-6 col-lg-4 mb-4">
@@ -251,12 +252,13 @@
     <div class="container pt-5">
         <div class="d-flex flex-column text-center mb-5">
             <h2 class="text-white mb-3 display-4">Conference</h2>
+            <p class="text-white" style="font-size: .9rem;">"Ninguno de los paquetes incluye viáticos ni hospedaje. En caso de ser necesario, estos serán cubiertos por el cliente. Se aplicarán cargos adicionales por cada hora excedida."</p>
         </div>
         <div class="row pb-3 justify-content-center">
             <div class="col-md-6 col-lg-4 mb-4">
                 <div class="custom-card-service">
                     <div class="custom-card-img-wrapper">
-                        <img class="custom-card-img" src="img/service_1.webp" alt="">
+                        <img class="custom-card-img" src="img/pack_conf_1.webp" alt="">
                     </div>
                     <div class="custom-card-content">
                         <div class="d-flex justify-content-center align-items-center mb-2">
@@ -285,7 +287,7 @@
             <div class="col-md-6 col-lg-4 mb-4">
                 <div class="custom-card-service">
                     <div class="custom-card-img-wrapper">
-                        <img class="custom-card-img" src="img/service_1.webp" alt="">
+                        <img class="custom-card-img" src="img/pack_conf_2.webp" alt="">
                     </div>
                     <div class="custom-card-content">
                         <div class="d-flex justify-content-center align-items-center mb-2">
@@ -315,7 +317,7 @@
             <div class="col-md-6 col-lg-4 mb-4">
                 <div class="custom-card-service">
                     <div class="custom-card-img-wrapper">
-                        <img class="custom-card-img" src="img/service_1.webp" alt="">
+                        <img class="custom-card-img" src="img/pack_conf_4.webp" alt="">
                     </div>
                     <div class="custom-card-content">
                         <div class="d-flex justify-content-center align-items-center mb-2">
@@ -345,7 +347,7 @@
             <div class="col-md-6 col-lg-4 mb-4">
                 <div class="custom-card-service">
                     <div class="custom-card-img-wrapper">
-                        <img class="custom-card-img" src="img/service_1.webp" alt="">
+                        <img class="custom-card-img" src="img/pack_conf_3.webp" alt="">
                     </div>
                     <div class="custom-card-content">
                         <div class="d-flex justify-content-center align-items-center mb-2">
@@ -375,7 +377,7 @@
             <div class="col-md-6 col-lg-4 mb-4">
                 <div class="custom-card-service">
                     <div class="custom-card-img-wrapper">
-                        <img class="custom-card-img" src="img/service_1.webp" alt="">
+                        <img class="custom-card-img" src="img/pack_conf_mega.webp" alt="">
                     </div>
                     <div class="custom-card-content">
                         <div class="d-flex justify-content-center align-items-center mb-2">
