--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
                             <div class="d-flex justify-content-center align-items-center mb-2">
                                 <h4 class="card-title text-white text-truncate m-0">Trivium Producción</h4>
                             </div>
-                            <p>Renta y servicio de producciones musicales para conciertos y eventos sociales.</p>
-                            <p>Montaje de festivales, fiestas, organización de eventos, curaduría de música, servicios
+                            <p class="text-pack">Renta y servicio de producciones musicales para conciertos y eventos sociales.</p>
+                            <p class="text-pack">Montaje de festivales, fiestas, organización de eventos, curaduría de música, servicios
                                 musicales en vivo.</p>
                         </div>
                     </div>
